codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_debug_view_match.snap
---
source: tui/src/keymap_setup.rs
expression: rendered
---
Keypress Inspector
Press any key to see what Lemex receives. Esc is inspected; Ctrl+C closes.
Tip: Lemex can only inspect keys your terminal sends.

Detected: ctrl + o
Config key: ctrl-o
Raw event: code=Char('o'), modifiers=ctrl, kind=Press

Assigned actions:
  - global.copy (Copy) - Copy the last agent response to the clipboard. [Default]
